Added the compression parameters for cluster ANN, but ITs are failing since readers are not correctly able to read the files.
To test just ITs just run ./gradlew :integTest --tests "org.opensearch.knn.integ.ClusterANNIT.testBasicIndexAndSearch"

Apart from this: code now handles compression parameter.
Design doc is added for the LLD and other details on decision points.

Signed-off-by: Navneet Verma <navneev@amazon.com>